Add timeout to API requests

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: weather-app
         image: greynox/weather-app:latest  # Docker Hub 이미지 사용
+        imagePullPolicy: Always  # 항상 최신 이미지를 다시 다운로드
         ports:
         - containerPort: 8000
         resources:
