--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -8,5 +8,5 @@ spec:
     app: weather-app
   ports:
     - protocol: TCP
-      port: 80      # 외부에서는 80번 포트로 접속
+      port: 8082      # 외부 접속 포트를 8082로 변경 (권한 문제 방지)
       targetPort: 8000  # 내부 컨테이너의 8000번 포트로 연결
