Add HPA configuration and clean up project structure

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: weather-app
-        image: greynox7/weather-app:latest  # Docker Hub 이미지 사용
+        image: greynox/weather-app:latest  # Docker Hub 이미지 사용
         imagePullPolicy: Always  # 항상 최신 이미지를 다시 다운로드
         env:
         - name: REDIS_HOST
